add color themes and dark-mode

--- a/src/components/RecipeList/styles.scss
+++ b/src/components/RecipeList/styles.scss
@@ -48,5 +48,15 @@
       width: 120px;
       border-radius: 2px;
     }
+
+    &.dark {
+      background: #555;
+
+      p,
+      h3,
+      div {
+        color: white;
+      }
+    }
   }
 }
