--- a/src/components/RecipeList/styles.scss
+++ b/src/components/RecipeList/styles.scss
@@ -59,4 +59,17 @@
       }
     }
   }
+
+  .btn-container {
+    display: flex;
+    margin-top: atuo;
+
+    .delete-btn {
+      box-sizing: border-box;
+      background-color: transparent;
+      border: none;
+      padding: 0;
+      margin-left: auto;
+    }
+  }
 }
